routing and output

--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -5,6 +5,7 @@
         <h4 class="card-title">{{ user?.login }}</h4>
         <div class="card-text">
             <button class="btn btn-info">Vist us</button>
+            <button (click)="destroyUser()" class="btn ms-2 btn-danger">Delete</button>
         </div>
     </div>
 </div>
