--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -9,6 +9,6 @@
 
 <div class="row my-5">
     <div *ngFor="let user of users" class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-        <app-user-card [user]="user"></app-user-card>
+        <app-user-card [user]="user" (delete)="deleteUser($event)"></app-user-card>
     </div>
 </div>
